# agentskills

archive/20260502-125338/repo-root/: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml  pyrightconfig.json
archive/20260502-125338/repo-root/.agents/audit/: spec_kit_emit_issues.jsonl
archive/20260502-125338/repo-root/docs/: agent-capabilities.md  agent-contract.md  agent-operations.md  architecture.md  installer.md  spec_kit_runbook.md  spec_kit_workflow.md  standards.md
archive/20260502-125338/repo-root/skills/release-catalog-onboarding/: SKILL.md
archive/20260502-125338/repo-root/skills/spec-kit/: AGENTS.md  README.md  SKILL.md  When using spec-kit, you need to use the.litcoffee  agent.schema.json  contracts.md  workflow.schema.json
archive/20260502-125338/repo-root/skills/spec-kit/scripts/: README.md  install_spec_kit_deps.sh
archive/20260502-125338/repo-root/skills/workflow-contract-sync/: SKILL.md
archive/20260502-125338/repo-root/src/agentskills/: installer.py
archive/20260502-125338/repo-root/src/agentskills/contracts/: __init__.py
archive/20260502-125338/repo-root/tests/: conftest.py
archive/20260502-125338/repo-root/tests/features/: spec_kit_workflow.feature  test_spec_kit_workflow_steps.py
archive/20260502-125338/repo-root/tests/integration/: test_spec_kit_end_to_end.py
archive/20260502-125338/repo-root/tests/unit/: test_cli.py  test_dependency_graph.py  test_github_issues.py  test_installer.py  test_skill_scripts.py  test_spec_kit_library_modules.py  test_spec_kit_models.py  test_spec_kit_runner.py
(+38 files in other folders)
