[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskills"
version = "0.1.0"
description = "Agent-first monorepo for deterministic skill orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentskills = "agentskills.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-bdd>=8.0.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
